ionos_dev2/analytics/superset/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superset-service
  namespace: analytics
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: superset
    app.kubernetes.io/name: superset
  ports:
    - port: 8088
      targetPort: 8088
